--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@picocss/pico": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-localstorage-hook": "github:tmetcalfe89/react-localstorage-hook"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
